--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="icon" type="favicon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
+    <title>wiris 3.0</title>
     <script>
         var editor;
         window.onload = function () {
