--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
     </script>  
     </div>
 </div>
+<div class="developers">
+    <marquee>Made by- Swayam Jain, Yugsinh Gharia</marquee>
+</div>
 </body>
 </html>
