--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </div>
 </div>
 <div class="developers">
-    <marquee>Made by- Swayam Jain, Yugsinh Gharia</marquee>
+    <marquee id="mar">Made by- Swayam Jain, Yugsinh Gharia</marquee>
+    <p id="thx">Thanks To Desmos And Wiris to let us make this :)</p>
 </div>
 </body>
 </html>
