--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          }
          </script>
          <link rel="stylesheet" href="style.css">
+	       <title>PARCC 3.0</title>
        </head>
        <body>
         <table>
