--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
         var calculator = Desmos.ScientificCalculator(elt);
     calculator.setExpression({ id: 'graph1'});
     </script>
-    <center><marquee id="mar">Made by- Swayam Jain</marquee></center>
+    <center><marquee id="mar">Made by- Swayam Jain, Yugsinh Gharia</marquee></center>
     </body>
 </html>
