--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script>
         var elt = document.getElementById('calculator');
         var calculator = Desmos.ScientificCalculator(elt);
-    calculator.setExpression({ id: 'graph1'});
+  //  calculator.setExpression({ id: 'graph1'});
     </script>
     <center><marquee id="mar">Made by- Swayam Jain, Yugsinh Gharia</marquee></center>
     </body>
